--- a/bonaire.html
+++ b/bonaire.html
@@ -4,7 +4,7 @@
   <span id="header" class ="name"> Emma Ladouceur </span>
 </div>
 
-    <td> <br/> <img id = "photoC" src= "bonaire.jpg"><br/></td>
+    <td> <br/> <img id = "photoC" src= "bonaire.JPG"><br/></td>
 
 <div id="country_text">
   I first learned to scuba dive when I was 11 and since then its become quite an important part of my life.
