--- a/singapore.html
+++ b/singapore.html
@@ -6,7 +6,7 @@
   <span id="header" class ="name"> Emma Ladouceur </span>
 </div>
 
-    <td> <br/> <img id = "photoC" src= "singapore.jpg"><br/></td>
+    <td> <br/> <img id = "photoC" src= "singapore.JPG"><br/></td>
 
 <div id="country_text">
   Another trip I did while on Georgetown's Hong Kong study abroad program was to Singapore. Having the opportunity to visit this country
